--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport-facebook": "^2.1.1"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "morgan": "^1.8.2"
   }
 }
