--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "passport-facebook": "^2.1.1"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0",
-    "morgan": "^1.8.2"
+    "morgan": "^1.8.2",
+    "nodemon": "^1.11.0"
   }
 }
