--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.15.3",
     "install": "^0.10.1",
     "mongoose": "^4.10.5",
+    "mongoose-type-url": "^1.0.2",
     "npm": "^5.0.3",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
