--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "app-module-path": "^2.2.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
+    "cities": "^1.1.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
