--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "install": "^0.10.1",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "mongoose": "^4.10.5",
     "mongoose-type-url": "^1.0.2",
     "npm": "^5.0.3",
